# transport_minimum

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  __init__.py  models.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  store.ts  types.ts
frontend/src/components/: Canvas.tsx  Sidebar.tsx  index.ts
src/transport_minimum/: __init__.py  solver.py
tests/: __init__.py  test_solver.py
